fixed spacing

--- a/styles/TwoColumn.module.scss
+++ b/styles/TwoColumn.module.scss
@@ -25,8 +25,21 @@
       }
     }
 
+    //bracket img needs to be made smaller for mobile
+
     //added============================
     &.our-background {
+      padding-bottom: 0;
+      .inner__content {
+        // @include desktop-breakpoint-minus {
+        //   margin-bottom: 0;
+        // }
+        .content {
+          max-width: fit-content;
+        }
+        flex-basis: calc(100% - 34rem);
+      }
+
       .inner__image {
         flex-basis: 30rem;
         // height: 24rem;
@@ -36,6 +49,7 @@
           transform: scale(0.65);
         }
       }
+      
     }
 
     //added============================
